[gd_scene load_steps=29 format=3 uid="uid://co5owac6wyksp"]

[ext_resource type="Script" path="res://entities/player/player.gd" id="1_mu5ft"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="2_avxra"]
[ext_resource type="Script" path="res://addons/godot_state_charts/parallel_state.gd" id="3_t4de5"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="4_gnj8o"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="5_gsjlk"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="6_0e3os"]
[ext_resource type="Animation" uid="uid://c0cxmcwl4xdrr" path="res://mesh/player/anim/attack.res" id="7_54mhj"]
[ext_resource type="Animation" uid="uid://u3clc6jtjci6" path="res://mesh/player/anim/reset.res" id="7_i8q6t"]
[ext_resource type="Animation" uid="uid://kjvtmjqusa7h" path="res://mesh/player/anim/run_backwards .res" id="7_mc84v"]
[ext_resource type="PackedScene" uid="uid://b3k7rdj7hreco" path="res://mesh/player/protag.glb" id="7_ymjqf"]
[ext_resource type="Animation" uid="uid://cisa4nxfd8f07" path="res://mesh/player/anim/idle .res" id="8_87b4f"]
[ext_resource type="Animation" uid="uid://bh8ld1ofvh7pn" path="res://mesh/player/anim/run_left .res" id="8_jo662"]
[ext_resource type="Animation" uid="uid://ij5obftei1ml" path="res://mesh/player/anim/run_right .res" id="9_7uqty"]
[ext_resource type="Animation" uid="uid://6qagihy6myy5" path="res://mesh/player/anim/run .res" id="9_w18cw"]
[ext_resource type="PackedScene" uid="uid://ut7yxyfx0kwy" path="res://mesh/player/katana.glb" id="11_7758p"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_v07fb"]
radius = 0.286748
height = 1.688

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_q7617"]
radius = 0.235373
height = 1.65864

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7cidf"]
_data = {
"attack": ExtResource("7_54mhj"),
"idle ": ExtResource("8_87b4f"),
"reset": ExtResource("7_i8q6t"),
"run ": ExtResource("9_w18cw"),
"run_backwards ": ExtResource("7_mc84v"),
"run_left ": ExtResource("8_jo662"),
"run_right ": ExtResource("9_7uqty")
}

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_fon1n"]

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_4ifhx"]
xfade_time = 0.1
input_0/name = "state_0"
input_0/auto_advance = false
input_0/reset = true
input_1/name = "state_1"
input_1/auto_advance = false
input_1/reset = true

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_uw2j8"]
animation = &"attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xiqkt"]
animation = &"idle "

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lnmjs"]
animation = &"run_backwards "

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kditg"]
animation = &"run "

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_42x8c"]
animation = &"run_right "

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pb8bw"]
animation = &"run_left "

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_sxt6d"]
blend_point_0/node = SubResource("AnimationNodeAnimation_xiqkt")
blend_point_0/pos = Vector2(0, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_lnmjs")
blend_point_1/pos = Vector2(0, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_kditg")
blend_point_2/pos = Vector2(0, -1)
blend_point_3/node = SubResource("AnimationNodeAnimation_42x8c")
blend_point_3/pos = Vector2(1, 0)
blend_point_4/node = SubResource("AnimationNodeAnimation_pb8bw")
blend_point_4/pos = Vector2(-1, 0)

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_813oe"]
graph_offset = Vector2(-455.091, 127)
nodes/attack_shot/node = SubResource("AnimationNodeOneShot_fon1n")
nodes/attack_shot/position = Vector2(100, 160)
nodes/attack_type/node = SubResource("AnimationNodeTransition_4ifhx")
nodes/attack_type/position = Vector2(-80, 300)
nodes/basic_attack/node = SubResource("AnimationNodeAnimation_uw2j8")
nodes/basic_attack/position = Vector2(-320, 300)
nodes/locomotion_blend/node = SubResource("AnimationNodeBlendSpace2D_sxt6d")
nodes/locomotion_blend/position = Vector2(-200, 120)
node_connections = [&"attack_shot", 0, &"locomotion_blend", &"attack_shot", 1, &"attack_type", &"attack_type", 0, &"basic_attack", &"output", 0, &"attack_shot"]

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("_state_chart", "_hurtbox", "_animation_tree")]
collision_layer = 0
script = ExtResource("1_mu5ft")
_state_chart = NodePath("StateChart")
_hurtbox = NodePath("hurtboxarea")
_animation_tree = NodePath("AnimationTree")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.844011, 0)
shape = SubResource("CapsuleShape3D_v07fb")

[node name="hurtboxarea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="hurtboxarea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.847681, 0)
shape = SubResource("CapsuleShape3D_q7617")

[node name="StateChart" type="Node" parent="."]
script = ExtResource("2_avxra")

[node name="ParallelState" type="Node" parent="StateChart"]
script = ExtResource("3_t4de5")

[node name="Movement" type="Node" parent="StateChart/ParallelState"]
script = ExtResource("4_gnj8o")
initial_state = NodePath("FollowCamMovement")

[node name="FollowCamMovement" type="Node" parent="StateChart/ParallelState/Movement"]
script = ExtResource("5_gsjlk")

[node name="OnChangePerspective" type="Node" parent="StateChart/ParallelState/Movement/FollowCamMovement"]
script = ExtResource("6_0e3os")
to = NodePath("../../TopDownCamMovement")
event = &"change_perspective"

[node name="TopDownCamMovement" type="Node" parent="StateChart/ParallelState/Movement"]
script = ExtResource("5_gsjlk")

[node name="OnChangePerspective" type="Node" parent="StateChart/ParallelState/Movement/TopDownCamMovement"]
script = ExtResource("6_0e3os")
to = NodePath("../../FollowCamMovement")
event = &"change_perspective"

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../protag")
libraries = {
"": SubResource("AnimationLibrary_7cidf")
}
tree_root = SubResource("AnimationNodeBlendTree_813oe")
anim_player = NodePath("../protag/AnimationPlayer")
parameters/attack_shot/active = false
parameters/attack_shot/internal_active = false
parameters/attack_shot/request = 0
parameters/attack_type/current_state = "state_0"
parameters/attack_type/transition_request = ""
parameters/attack_type/current_index = 0
parameters/locomotion_blend/blend_position = Vector2(0, 0)

[node name="protag" parent="." instance=ExtResource("7_ymjqf")]

[node name="root" parent="protag" index="0"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="Skeleton3D" parent="protag/root" index="0"]
bones/0/position = Vector3(-4.13613e-16, 0.881258, -0.00196802)
bones/1/rotation = Quaternion(0.0201894, -0.00329916, -6.66812e-05, 0.999791)
bones/2/rotation = Quaternion(0.000933908, 0.00330141, -3.08645e-06, 0.999994)
bones/2/scale = Vector3(1, 1, 1)
bones/3/rotation = Quaternion(-0.0100659, -1.18967e-07, -1.19406e-09, 0.999949)
bones/4/rotation = Quaternion(-0.387679, 0.00620007, -0.00260763, 0.92177)
bones/5/rotation = Quaternion(0.374358, -0.00626845, 0.00250533, 0.92726)
bones/5/scale = Vector3(1, 1, 1)
bones/6/rotation = Quaternion(-0.580132, 0.429596, 0.411516, 0.556371)
bones/6/scale = Vector3(1, 1, 1)
bones/7/rotation = Quaternion(-0.540437, -0.210536, 0.0265891, 0.814184)
bones/7/scale = Vector3(1, 1, 1)
bones/8/rotation = Quaternion(1.40859e-08, 0.131539, -5.00445e-08, 0.991311)
bones/9/rotation = Quaternion(-5.40794e-09, -5.63674e-09, 0.435073, 0.900395)
bones/10/rotation = Quaternion(-1.30305e-08, -0.00779018, 6.98563e-09, 0.99997)
bones/11/rotation = Quaternion(0.00137018, -0.00710408, 0.150261, 0.98862)
bones/12/rotation = Quaternion(0.0567502, -0.400288, 0.368763, 0.836997)
bones/12/scale = Vector3(1, 1, 1)
bones/13/rotation = Quaternion(-0.366123, -0.321439, -0.138325, 0.862262)
bones/14/rotation = Quaternion(-0.316831, 0.0573644, 0.100312, 0.941416)
bones/14/scale = Vector3(1, 1, 1)
bones/15/rotation = Quaternion(0.0839125, -0.00711082, 0.0305364, 0.99598)
bones/16/rotation = Quaternion(0.0373715, 0.567944, -0.155846, 0.807314)
bones/17/rotation = Quaternion(-0.158289, -0.518632, -0.158897, 0.825056)
bones/17/scale = Vector3(1, 1, 1)
bones/18/rotation = Quaternion(-0.219472, -0.0359502, 0.0111537, 0.974892)
bones/19/rotation = Quaternion(0.0867348, -0.0291434, -0.377692, 0.921399)
bones/19/scale = Vector3(1, 1, 1)
bones/20/rotation = Quaternion(-0.110638, 0.00194487, 0.0811112, 0.990543)
bones/20/scale = Vector3(1, 1, 1)
bones/21/rotation = Quaternion(-0.197781, 0.0684407, 0.0104515, 0.977798)
bones/22/rotation = Quaternion(-0.285474, -0.0370734, 0.0247503, 0.957349)
bones/23/rotation = Quaternion(-0.580132, -0.429596, -0.411516, 0.556371)
bones/23/scale = Vector3(1, 1, 1)
bones/24/rotation = Quaternion(-0.396104, 0.467763, -0.134199, 0.778647)
bones/24/scale = Vector3(1, 1, 1)
bones/25/rotation = Quaternion(1.25272e-08, -0.417732, 2.9618e-08, 0.90857)
bones/26/rotation = Quaternion(3.5293e-08, 8.68423e-08, -0.724788, 0.688972)
bones/27/rotation = Quaternion(-8.41869e-09, -0.0830655, -3.13887e-08, 0.996544)
bones/28/rotation = Quaternion(0.022952, -0.0791591, -0.0473096, 0.995474)
bones/29/rotation = Quaternion(0.0567503, 0.400288, -0.368763, 0.836997)
bones/30/rotation = Quaternion(-0.474813, 0.300795, 0.178827, 0.807525)
bones/30/scale = Vector3(1, 1, 1)
bones/31/rotation = Quaternion(-0.436198, -0.0438764, -0.106902, 0.8924)
bones/31/scale = Vector3(1, 1, 1)
bones/32/rotation = Quaternion(0.0839126, 0.00711082, -0.0305364, 0.99598)
bones/33/rotation = Quaternion(0.0373715, -0.567944, 0.155846, 0.807314)
bones/34/rotation = Quaternion(-0.263909, 0.493657, 0.224788, 0.797575)
bones/35/rotation = Quaternion(-0.344, 0.0370928, -0.00639917, 0.938215)
bones/36/rotation = Quaternion(0.0867348, 0.0291434, 0.377692, 0.921399)
bones/37/rotation = Quaternion(-0.110638, -0.00194487, -0.0811112, 0.990543)
bones/37/scale = Vector3(1, 1, 1)
bones/38/rotation = Quaternion(-0.322868, -0.0665083, -0.0192356, 0.943908)
bones/39/rotation = Quaternion(-0.407171, 0.0399691, -0.0197354, 0.912264)
bones/40/rotation = Quaternion(0.702436, 0.1828, 0.681643, 0.0923642)
bones/40/scale = Vector3(1, 0.999999, 1)
bones/41/rotation = Quaternion(-1.83139e-08, 0.0230207, 4.12932e-08, 0.999735)
bones/42/rotation = Quaternion(-6.32286e-08, -2.77935e-08, 0.328209, 0.944605)
bones/43/rotation = Quaternion(0.343292, 0.592661, -0.434596, 0.584833)
bones/43/scale = Vector3(1, 1, 1)
bones/44/rotation = Quaternion(-2.46466e-07, 0.982272, 0.187462, -3.52404e-06)
bones/45/rotation = Quaternion(9.8687e-08, 0.0456043, 1.26228e-07, 0.99896)
bones/46/rotation = Quaternion(-0.724505, 0.0750686, 0.684932, 0.0180571)
bones/46/scale = Vector3(0.999999, 1, 1)
bones/47/rotation = Quaternion(-6.95777e-07, -0.0335506, -3.33014e-07, 0.999437)
bones/48/rotation = Quaternion(-1.73586e-07, 2.8962e-08, -0.272639, 0.962117)
bones/48/scale = Vector3(1, 1, 1)
bones/49/rotation = Quaternion(0.395319, -0.55807, 0.493183, 0.537635)
bones/50/rotation = Quaternion(9.71486e-08, 0.982272, 0.187463, 3.46881e-06)
bones/50/scale = Vector3(1, 1, 1)
bones/51/rotation = Quaternion(-7.20661e-09, -0.053459, -4.41112e-08, 0.99857)

[node name="BoneAttachment3D" type="BoneAttachment3D" parent="protag/root/Skeleton3D" index="0"]
transform = Transform3D(-0.391734, -0.438544, 0.80884, 0.861966, -0.482394, 0.155915, 0.321804, 0.758271, 0.566981, 0.277245, 0.995238, 0.0279127)
bone_name = "hand.l"
bone_idx = 28

[node name="katana" parent="protag/root/Skeleton3D/BoneAttachment3D" instance=ExtResource("11_7758p")]
transform = Transform3D(-9.65074, 41.8416, 61.491, 7.93896, -61.0725, 42.8031, 73.9515, 12.0167, 3.42953, 0.228504, 0.314751, -0.0280105)

[node name="BoneAttachment3D2" type="BoneAttachment3D" parent="protag/root/Skeleton3D" index="2"]
transform = Transform3D(-0.330952, -0.130772, -0.934542, -0.725309, -0.598278, 0.340574, -0.603653, 0.790545, 0.103151, -0.38895, 0.897236, 0.00752792)
bone_name = "hand.r"
bone_idx = 11

[node name="katana" parent="protag/root/Skeleton3D/BoneAttachment3D2" instance=ExtResource("11_7758p")]
transform = Transform3D(-5.35252, 45.4396, 59.4271, 15.9039, 58.9083, -43.6106, -73.0986, 9.48931, -13.8397, 0.033505, 0.0861468, -0.040797)
visible = false

[node name="SM_Wep_Odachi_Covered_01" parent="protag/root/Skeleton3D/BoneAttachment3D2/katana" index="1"]
visible = false

[connection signal="state_entered" from="StateChart/ParallelState/Movement/FollowCamMovement" to="." method="_on_enter_follow_movement"]
[connection signal="state_physics_processing" from="StateChart/ParallelState/Movement/FollowCamMovement" to="." method="_universal_physics"]
[connection signal="state_physics_processing" from="StateChart/ParallelState/Movement/FollowCamMovement" to="." method="_follow_cam_processing"]
[connection signal="state_physics_processing" from="StateChart/ParallelState/Movement/FollowCamMovement" to="." method="_follow_movement_physics"]
[connection signal="state_processing" from="StateChart/ParallelState/Movement/FollowCamMovement" to="." method="_perspective_change_process"]
[connection signal="state_unhandled_input" from="StateChart/ParallelState/Movement/FollowCamMovement" to="." method="_follow_cam_unhandled_input"]
[connection signal="state_entered" from="StateChart/ParallelState/Movement/TopDownCamMovement" to="." method="_on_enter_topdown_movement"]
[connection signal="state_physics_processing" from="StateChart/ParallelState/Movement/TopDownCamMovement" to="." method="_topdown_movement_physics"]
[connection signal="state_physics_processing" from="StateChart/ParallelState/Movement/TopDownCamMovement" to="." method="_universal_physics"]
[connection signal="state_processing" from="StateChart/ParallelState/Movement/TopDownCamMovement" to="." method="_perspective_change_process"]

[editable path="protag"]
[editable path="protag/root/Skeleton3D/BoneAttachment3D/katana"]
[editable path="protag/root/Skeleton3D/BoneAttachment3D2/katana"]
